# sycabot_ros

./: .gitignore  acados_sim.json  test.py
config/: boot_init.sh  config_jetbot.sh  init_mocap.sh  mocap_config.yaml  params_identification.yaml  robot_boot.service  setup_ROS.sh
config/fastDDS/: setup_superCLI.sh  super_client_configuration_file.xml
datas_recording/: recording.csv
sycabot_base/: package.xml  setup.cfg  setup.py
sycabot_base/sycabot_base/: beaconClient.py  motors.py  motorsRL.py  motors_waveshare.py
sycabot_central/: package.xml  setup.cfg  setup.py
sycabot_central/sycabot_central/: BotHandler.py  BotHandlerMPC.py  ControlActionClient.py  DeadzoneActionClient.py  GAMEPAD.py  GamepadActionServer.py  Gamepad_recorder.py  Gridworld.py  IdentificationActionClient.py  MPCActionClient.py  PPActionClient.py  beacon.py  central.py
sycabot_control/: package.xml  setup.cfg  setup.py
sycabot_control/sycabot_control/: CtrllerActionServer.py  MPC.py  PPCtrller.py
sycabot_identification/: package.xml  setup.cfg  setup.py
sycabot_identification/sycabot_identification/: DeadzoneActionServer.py  IdentificationActionServer.py
sycabot_interfaces/: CMakeLists.txt  package.xml
sycabot_interfaces/action/: Control.action  Identification.action
sycabot_launch/: package.xml  setup.cfg  setup.py
sycabot_launch/launch/: boot.launch.py  centralPC.launch.py  motors.launch.py  robot.launch.py
sycabot_pathplanner/: package.xml  setup.cfg  setup.py
sycabot_utils/: package.xml  setup.cfg  setup.py
sycabot_visualization/: package.xml  setup.cfg  setup.py
(+7 files in other folders)
