<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sycabot_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pierre.chassagne@epfl.ch">sycamore</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sycabot_base</depend>
  <depend>sycabot_control</depend>
  <depend>sycabot_identification</depend>
  <depend>sycabot_pathplanner</depend>
  <depend>sycabot_central</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
